fix: #1052 - card background icon is practically invisible

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -379,6 +379,8 @@ $card-group-margin: 1.5rem !default;
 $card-shadow: $shadow !default;
 $card-shadow-hover: rgba($dark, .16) 0 2px 16px 0 !default;
 
+$card-stamp-opacity: .2 !default;
+
 $cards-grid-gap: 1rem !default;
 $cards-grid-breakpoint: lg !default;
 
