--- a/src/scss/ui/_cards.scss
+++ b/src/scss/ui/_cards.scss
@@ -44,6 +44,7 @@
   height: calc(var(--stamp-size) * 1);
   max-height: 100%;
   border-top-right-radius: $border-radius;
+  opacity: $card-stamp-opacity;
   overflow: hidden;
   pointer-events: none;
 }
@@ -66,7 +67,6 @@
   right: calc(var(--stamp-size) * -.25);
   font-size: calc(var(--stamp-size) * .75);
   transform: rotate(10deg);
-  opacity: .075;
 
   .icon {
     stroke-width: 2;
